init new template

--- a/package/package.json
+++ b/package/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "hl7.fhir.template",
-  "version": "0.0.2",
+  "name": "healthedata.fhir.template",
+  "version": "0.0.0",
   "type": "fhir.template",
   "license": "CC0-1.0",
-  "description": "FHIR Test Template",
-  "author": "http://hl7.org/fhir",
-  "canonical": "http://github.com/FHIR/hl7-ig-template"
+  "description": "Health eData Inc FHIR Test Template",
+  "author": "mailto::healthedatainc.com",
+  "canonical": "http://www.fhir.org/guides/test4"
 }
